--- a/test.html
+++ b/test.html
@@ -1,22 +1,89 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>MindMirror Test</title>
   <style>
-    body { font-family: sans-serif; margin: 0; padding: 0; }
-    .progress { position: fixed; top: 0; left: 0; height: 8px; background: #4a90e2; width: 0%; z-index: 999; transition: width 0.3s; }
-    .question { padding: 15px; border-bottom: 1px solid #ddd; }
-    .options { display: flex; gap: 10px; flex-wrap: wrap; margin-top: 5px; }
-    button { margin: 20px; padding: 10px 20px; font-size: 1em; }
-    #result { padding: 20px; }
-    canvas { max-width: 400px; }
+    #progress-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      background: #f0f2f5;
+      padding: 10px;
+      z-index: 1000;
+    }
+    #progress-bar {
+      background: #4a90e2;
+      height: 20px;
+      width: 0%;
+      border-radius: 10px;
+      transition: width 0.3s ease;
+    }
+    #progress-text {
+      margin-top:5px;
+      font-size:0.9em;
+    }
+    .question-block {
+      margin-top:60px;
+      margin-bottom:20px;
+      padding:15px;
+      background:#fff;
+      border:1px solid #ddd;
+      border-radius:8px;
+    }
+    .options-group {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 10px;
+    }
+    .options-group label {
+      flex: 1 1 150px;
+      background:#f5f5f5;
+      border:1px solid #ccc;
+      border-radius:5px;
+      padding:8px;
+      text-align:center;
+      cursor:pointer;
+    }
+    @media(max-width: 768px){
+      .options-group {
+        flex-direction: column;
+      }
+      .options-group label {
+        flex: 1 1 100%;
+      }
+    }
+    button {
+      display:block;
+      margin:20px auto;
+      background:#4a90e2;
+      color:#fff;
+      padding:12px 20px;
+      border:none;
+      border-radius:5px;
+      cursor:pointer;
+    }
+    #result {
+      margin-top:60px;
+      padding:20px;
+      text-align:center;
+    }
+    canvas { max-width: 400px; margin: 20px auto; }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-  <div class="progress" id="progress"></div>
-  <form id="testForm">
-    <div id="questions"></div>
+  <div id="progress-container">
+    <div style="background:#ddd;width:100%;height:20px;border-radius:10px;">
+      <div id="progress-bar"></div>
+    </div>
+    <div id="progress-text">0% completed</div>
+  </div>
+  <form id="test-form" style="margin-top:60px;">
+    <!-- questions injected by JS -->
     <button type="submit">Submit Test</button>
   </form>
   <div id="result" style="display:none;">
@@ -24,86 +91,75 @@
     <p id="evalText"></p>
     <canvas id="chart"></canvas>
     <div>
-      <button onclick="location.reload()">Retake Test</button>
-      <button onclick="location.href='/logout'">Logout</button>
+      <button onclick="location.href='/test'">Retake Test</button>
+      <button onclick="window.location.href='/logout'">Logout</button>
     </div>
   </div>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script>
-const questionData = [
-  // put the 130 questions you made in an array
-  "I feel confident about my future.",
-  "I find it easy to relax.",
-  "I am motivated to achieve my goals.",
-  "I can adapt to change easily.",
-  "I generally have a positive outlook.",
-  // add the rest of your 130 here (or even import via server if you wish)
-];
+  <script>
+    async function loadQuestions(){
+      const res = await fetch('/api/questions-user');
+      const data = await res.json();
+      const form = document.getElementById("test-form");
+      data.forEach((q, i) => {
+        const div = document.createElement("div");
+        div.className = "question-block";
+        div.innerHTML = `<strong>${i+1}. ${q.text}</strong>
+          <div class="options-group">
+            ${q.options.map(opt => `
+              <label>
+                <input type="radio" name="q${i}" value="${opt}">
+                ${opt}
+              </label>
+            `).join("")}
+          </div>`;
+        form.insertBefore(div, form.querySelector("button"));
+      });
 
-while(questionData.length<130){
-  questionData.push(`Sample question ${questionData.length+1}`);
-}
-
-const questionsDiv = document.getElementById("questions");
-questionData.forEach((q,i)=>{
-  const div = document.createElement("div");
-  div.className="question";
-  div.innerHTML=`<strong>${i+1}. ${q}</strong>
-  <div class="options">
-    <label><input type="radio" name="q${i}" value="Strongly Agree">Strongly Agree</label>
-    <label><input type="radio" name="q${i}" value="Agree">Agree</label>
-    <label><input type="radio" name="q${i}" value="Neutral">Neutral</label>
-    <label><input type="radio" name="q${i}" value="Disagree">Disagree</label>
-    <label><input type="radio" name="q${i}" value="Strongly Disagree">Strongly Disagree</label>
-  </div>`;
-  questionsDiv.appendChild(div);
-});
-
-// progress bar
-document.addEventListener("input", ()=>{
-  const answered = document.querySelectorAll("input:checked").length;
-  const percent = (answered/questionData.length)*100;
-  document.getElementById("progress").style.width = percent + "%";
-});
-
-document.getElementById("testForm").addEventListener("submit", async e=>{
-  e.preventDefault();
-  const form = new FormData(e.target);
-  const answers = {};
-  form.forEach((v,k)=>{
-    answers[k]=v;
-  });
-  if(Object.keys(answers).length<1){
-    alert("Answer at least one question");
-    return;
-  }
-  const response = await fetch("/test",{
-    method:"POST",
-    headers:{'Content-Type':'application/json'},
-    body: JSON.stringify({answers})
-  });
-  const result = await response.json();
-  document.getElementById("testForm").style.display="none";
-  document.getElementById("result").style.display="block";
-  document.getElementById("evalText").innerText=result.evaluation;
-
-  new Chart(document.getElementById("chart"),{
-    type:"radar",
-    data:{
-      labels:["Emotional Stability","Stress Resilience","Social Interaction","Motivation","Self-Discipline","Optimism"],
-      datasets:[{
-        label:"Profile",
-        data:result.scores,
-        fill:true,
-        backgroundColor:"rgba(74,144,226,0.3)",
-        borderColor:"#4a90e2"
-      }]
-    },
-    options:{
-      scales:{r:{min:0,max:100}}
+      document.addEventListener("input", () => {
+        const answered = document.querySelectorAll("input:checked").length;
+        const percent = Math.round((answered / data.length) * 100);
+        document.getElementById("progress-bar").style.width = percent + "%";
+        document.getElementById("progress-text").innerText = `${percent}% completed`;
+      });
     }
-  });
-});
-</script>
+
+    loadQuestions();
+
+    document.getElementById("test-form").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const formData = new FormData(e.target);
+      const answers = {};
+      formData.forEach((v,k) => { answers[k] = v });
+      if(Object.keys(answers).length < 1){
+        alert("Answer at least one question!");
+        return;
+      }
+      const res = await fetch("/test", {
+        method: "POST",
+        headers: {'Content-Type':'application/json'},
+        body: JSON.stringify({answers})
+      });
+      const data = await res.json();
+      document.getElementById("test-form").style.display = "none";
+      document.getElementById("result").style.display = "block";
+      document.getElementById("evalText").innerText = data.evaluation;
+      new Chart(document.getElementById("chart"),{
+        type:"radar",
+        data:{
+          labels:["Emotional Stability","Stress Resilience","Social Interaction","Motivation","Self-Discipline","Optimism"],
+          datasets:[{
+            label:"Your Profile",
+            data:data.scores,
+            fill:true,
+            backgroundColor:"rgba(74,144,226,0.3)",
+            borderColor:"#4a90e2"
+          }]
+        },
+        options:{
+          scales:{r:{min:0,max:100}}
+        }
+      });
+    });
+  </script>
 </body>
 </html>
